--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
             <div class="features-grid">
                 <h2 class="big-product-name">Dream Wall</h2>
                 <p class="big-product-description">Wall-mountable gateway firewall with an integrated WiFi access point, PoE switching, and full UniFi application support.</p>
-                <a href="https://www.leadersystems.com.au/products.html?lgLCZBFZGO0=hYKzglLRzxvq66ke3YarTA==fOp/iDqiyWyohUtRKF85xw==" class="buy-button-link">
+                <a href="https://www.leadersystems.com.au/products.html?TG9zvBVPjRY=KOad6u3urIecYWtRl9CylQ==L9MvUPUtslKxxSt+w9fM" class="buy-button-link">
                     <button class="big-buy-button">EARN 3 POINTS</button>
                 </a>
                 <div class="specs-grid">
@@ -221,7 +221,7 @@
             <div class="features-grid">
                 <h2 class="big-product-name">Dream Router</h2>
                 <p class="big-product-description">Desktop gateway firewall with an integrated WiFi access point that powers your network and one other UniFi application.</p>
-                <a href="linkhere" class="buy-button-link">
+                <a href="https://www.leadersystems.com.au/products.html?oamAKOoU7cI=Qv30ZAfcdcsFeUA7lPaSjA==b1q22re5d28iMw09Zs6b" class="buy-button-link">
                     <button class="big-buy-button">EARN 1 POINT</button>
                 </a>    
                 <div class="specs-grid">
@@ -283,6 +283,14 @@
                     </div>
                 </div>
             </div>
+        </div>
+    </div>
+    <div class="contact-section">
+        <h1 class="contact-heading">Questions? Contact Us!</h1>
+        <h2 class="contact-number">02 7903 5046</h2>
+        <a href="mailto:ubnt-support@leadersystems.com.au" class="email-button">E-mail Leader Ubiquiti Support</a>
+        <div class="contact-container">
+        <img src="https://newsabalita.files.wordpress.com/2023/10/contact_hero.png" alt="contact-hero" class="hero-image"> 
         </div>
     </div>
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
